fix(wcag): notification, overflowMenu & search accessibility enhancements

--- a/src/components/reusable/overflowMenu/overflowMenuItem.scss
+++ b/src/components/reusable/overflowMenu/overflowMenuItem.scss
@@ -29,6 +29,7 @@
 
   &:focus {
     outline-color: var(--kd-color-border-focus);
+    background: var(--kd-color-background-inverse-hover);
   }
 
   &.destructive {
